paper/tst/jalangi_test/RESULTS_V2/timeResultsLyaNOWITH.txt
The name of file 3d-cube.js

real	4m40.010s
user	6m4.538s
sys	0m3.924s
The name of file 3d-morph.js

real	0m46.548s
user	0m46.436s
sys	0m0.052s
The name of file 3d-raytrace.js

real	0m2.885s
user	0m2.993s
sys	0m0.036s
The name of file access-binary-trees.js

real	0m0.573s
user	0m0.585s
sys	0m0.004s
The name of file access-fannkuch.js

real	0m0.375s
user	0m0.367s
sys	0m0.008s
The name of file access-nbody.js

real	0m21.273s
user	0m21.232s
sys	0m0.056s
The name of file access-nsieve.js

real	0m0.262s
user	0m0.234s
sys	0m0.036s
The name of file bitops-3bit-bits-in-byte.js

real	0m0.185s
user	0m0.185s
sys	0m0.000s
The name of file bitops-bits-in-byte.js

real	0m0.274s
user	0m0.275s
sys	0m0.000s
The name of file bitops-bitwise-and.js

real	0m0.238s
user	0m0.235s
sys	0m0.004s
The name of file bitops-nsieve-bits.js

real	0m0.273s
user	0m0.269s
sys	0m0.004s
The name of file controlflow-recursive.js

real	0m0.262s
user	0m0.252s
sys	0m0.016s
The name of file crypto-aes.js

real	0m9.220s
user	0m9.856s
sys	0m0.128s
The name of file crypto-md5.js

real	0m0.211s
user	0m0.223s
sys	0m0.008s
The name of file crypto-sha1.js

real	0m0.204s
user	0m0.202s
sys	0m0.004s
The name of file date-format-tofte.js
undefined:1
Y()
^

ReferenceError: Y is not defined
    at eval (eval at _obj (/home/grigorisntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:1)
    at eval (<anonymous>)
    at eval (/home/grigorisntousakis/lya/core/src/txfm.js:450:20)
    at Object.apply (/home/grigorisntousakis/lya/core/src/txfm.js:153:32)
    at Date.formatDate (/home/grigorisntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:363:26)
    at Object.<anonymous> (/home/grigorisntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:378:28)
    at Object.apply (/home/grigorisntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:643:30)
    at Object.Module._extensions..js (module.js:654:10)
    at Module.load (module.js:556:32)

real	0m0.073s
user	0m0.056s
sys	0m0.004s
The name of file date-format-xparb.js
undefined:1
Date.prototype.format0 = function(){return this.getFullYear() + '-' + String.leftPad(this.getMonth() + 1, 2, '0') + '-' + String.leftPad(this.getDate(), 2, '0');}
                                                                             ^

TypeError: String.leftPad is not a function
    at Date.format0 (eval at _obj (/home/grigorisntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:78)
    at Date.dateFormat (/home/grigorisntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:106:22)
    at Object.<anonymous> (/home/grigorisntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:497:28)
    at Object.apply (/home/grigorisntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:643:30)
    at Object.Module._extensions..js (module.js:654:10)
    at Module.load (module.js:556:32)
    at tryModuleLoad (module.js:499:12)
    at Function.Module._load (module.js:491:3)
    at Module.require (module.js:587:17)

real	0m0.056s
user	0m0.053s
sys	0m0.004s
The name of file math-cordic.js

real	0m0.500s
user	0m0.528s
sys	0m0.008s
The name of file math-partial-sums.js

real	1m1.569s
user	1m1.768s
sys	0m0.112s
The name of file math-spectral-norm.js

real	0m0.264s
user	0m0.263s
sys	0m0.008s
The name of file regexp-dna.js

real	0m0.678s
user	0m0.658s
sys	0m0.020s
The name of file string-base64.js

real	0m18.294s
user	0m18.274s
sys	0m0.032s
The name of file string-fasta.js

real	0m1.391s
user	0m1.444s
sys	0m0.004s
The name of file string-tagcloud.js

real	0m14.776s
user	0m14.824s
sys	0m0.048s
The name of file string-unpack-code.js

real	0m5.378s
user	0m5.533s
sys	0m0.024s
The name of file string-validate-input.js

real	0m0.105s
user	0m0.115s
sys	0m0.004s
